--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -8,5 +8,7 @@
         Title="MainWindow" Height="1080" Width="1480">
     <Grid>
         <local:OrderControl></local:OrderControl>
+        <local:OrderSummaryControl></local:OrderSummaryControl>
+
     </Grid>
 </Window>
