--- a/PointOfSale/OrderControl.xaml
+++ b/PointOfSale/OrderControl.xaml
@@ -8,17 +8,32 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style TargetType="Button">
-            <Setter Property="Height" Value="50px"/>
-            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="Height" Value="30px"/>
+            <Setter Property="Width" Value="120px"/>
+            <Setter Property="FontSize" Value="15"/>
+            
         </Style>
     </UserControl.Resources>
 
     <DockPanel>
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+               
+                
+            </Grid.ColumnDefinitions>
+            <Button Name="ItemSelection" Grid.Column="0" HorizontalAlignment="Center">Item Selection</Button>
+            <Button Name="CancelOrder" Grid.Column="1" HorizontalAlignment="Center">Cancel Order</Button>
+            <Button Name="CompleteOrder" Grid.Column="2" HorizontalAlignment="Center">Complete Order</Button>
+        </Grid>
+
         <local:MenuItemSelectionControl DockPanel.Dock="Left"  >
         </local:MenuItemSelectionControl>
         
-        
-
+        <local:OrderSummaryControl>
+        </local:OrderSummaryControl>
     </DockPanel>
 
 
