--- a/PointOfSale/MenuItemSelectionControl.xaml
+++ b/PointOfSale/MenuItemSelectionControl.xaml
@@ -22,7 +22,7 @@
         </Grid.ColumnDefinitions>
 
         <StackPanel  Grid.Column="0">
-            <TextBlock TextAlignment="Center">Entrees</TextBlock>
+            <TextBlock TextAlignment="Center" FontSize="20">Entrees</TextBlock>
             <Button  Name="AddCowpokeChiliButton">Cowpoke Chili</Button>
             <Button Name="AddRustlersRibsButton">Rustler's Ribs</Button>
             <Button Name="AddPecosPulledPorkButton">Pecos Pulled Pork</Button>
@@ -33,7 +33,7 @@
         </StackPanel>
 
         <StackPanel Grid.Column="1">
-            <TextBlock TextAlignment="Center">Sides</TextBlock>
+            <TextBlock TextAlignment="Center" FontSize="20">Sides</TextBlock>
             <Button Name="AddChiliCheeseFriesButton">Chili Cheese Fries</Button>
             <Button Name="AddCornDodgersButton">Corn Dodgers</Button>
             <Button Name="AddPandeCampoButton">Pan de Campo</Button>
@@ -41,7 +41,7 @@
         </StackPanel>
 
         <StackPanel Grid.Column="2">
-            <TextBlock TextAlignment="Center">Drinks</TextBlock>
+            <TextBlock TextAlignment="Center" FontSize="20">Drinks</TextBlock>
             <Button Name="AddJerkedSodaButton">Jerked Soda</Button>
             <Button Name="AddTexasTeaButton">Texas Tea</Button>
             <Button Name="AddCowboyCoffeeButton">Cowboy Coffee</Button>
