--- a/PointOfSale/MenuItemSelectionControl.xaml
+++ b/PointOfSale/MenuItemSelectionControl.xaml
@@ -23,7 +23,7 @@
 
         <StackPanel  Grid.Column="0">
             <TextBlock TextAlignment="Center" FontSize="20">Entrees</TextBlock>
-            <Button  Name="AddCowpokeChiliButton">Cowpoke Chili</Button>
+            <Button  Name="AddCowpokeChiliButton" Tag="CowpokeChili">Cowpoke Chili</Button>
             <Button Name="AddRustlersRibsButton">Rustler's Ribs</Button>
             <Button Name="AddPecosPulledPorkButton">Pecos Pulled Pork</Button>
             <Button Name="AddTrailBurgerButton">Trail Burger</Button>
