--- a/PointOfSale/OrderControl.xaml
+++ b/PointOfSale/OrderControl.xaml
@@ -23,7 +23,7 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Button Name="ItemSelection" Grid.Column="0" HorizontalAlignment="Center" >Item Selection</Button>
+            <Button Name="ItemSelection" Grid.Column="0" HorizontalAlignment="Center" Click="ItemSelectionClick" >Item Selection</Button>
             <Button Name="CancelOrder" Grid.Column="1" HorizontalAlignment="Center" Click="CancelOrderClick">Cancel Order</Button>
             <Button Name="CompleteOrder" Grid.Column="2" HorizontalAlignment="Center" Click="CompleteOrderClick">Complete Order</Button>
         </Grid>
