--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -30,8 +30,13 @@
                             <ColumnDefinition/>
                             <ColumnDefinition Width="25"/>
                         </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
                         <TextBlock Text="{Binding}"  />
                         <TextBlock Text="{Binding Path=Price}"  Grid.Column="1" />
+                        <ListView ItemsSource="{Binding Path=SpecialInstructions}" Grid.Row="1"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
