--- a/PointOfSale/CustomizeAngryChicken.xaml
+++ b/PointOfSale/CustomizeAngryChicken.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PointOfSale.CustomizeRustlersRibs"
+﻿<UserControl x:Class="PointOfSale.CustomizeAngryChicken"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <TextBlock FontSize="30" Text="Customize Rustler's Ribs"/>
+        <TextBlock FontSize="30" Text="Customize Angry Chiken"/>
         <StackPanel Orientation="Horizontal">
+            <CheckBox IsChecked="{Binding Path=Bread}">Bread</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
         </StackPanel>
     </StackPanel>
 </UserControl>
