--- a/PointOfSale/CustomizeTrailBurger.xaml
+++ b/PointOfSale/CustomizeTrailBurger.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PointOfSale.CustomizeRustlersRibs"
+﻿<UserControl x:Class="PointOfSale.CustomizeTrailBurger"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel>
-        <TextBlock FontSize="30" Text="Customize Rustler's Ribs"/>
+        <TextBlock FontSize="30" Text="Customize Dakota Double Burger"/>
         <StackPanel Orientation="Horizontal">
+            <CheckBox IsChecked="{Binding Path=Bun}">Bun</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Ketchup}">Ketchup</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Mustard}">Mustard</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
         </StackPanel>
     </StackPanel>
 </UserControl>
