--- a/PointOfSale/CustomizeWater.xaml
+++ b/PointOfSale/CustomizeWater.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="PointOfSale.CustomizeRustlersRibs"
+﻿<UserControl x:Class="PointOfSale.CustomizeWater"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,7 @@
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <TextBlock FontSize="30" Text="Customize Rustler's Ribs"/>
-        <StackPanel Orientation="Horizontal">
-        </StackPanel>
-    </StackPanel>
+    <Grid>
+            
+    </Grid>
 </UserControl>
