--- a/PointOfSale/CustomizeCornDodgers.xaml
+++ b/PointOfSale/CustomizeCornDodgers.xaml
@@ -4,9 +4,21 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
+             xmlns:data="clr-namespace:CowboyCafe.Data;assembly=CowboyCafe.Data"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+    <UserControl.Resources>
+        <ObjectDataProvider x:Key="SizeEnum" MethodName="GetValues"
+                        ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="data:Size"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </UserControl.Resources>
+    <StackPanel>
+        <ListBox Name="SizeOptions" SelectedIndex="0" Margin="8"
+               ItemsSource="{Binding Source={StaticResource SizeEnum}}"
+               SelectedItem="{Binding Path=Size}" />
+    </StackPanel>
 </UserControl>
