--- a/PointOfSale/CustomizePandeCampo.xaml
+++ b/PointOfSale/CustomizePandeCampo.xaml
@@ -4,19 +4,22 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
+             xmlns:data="clr-namespace:CowboyCafe.Data;assembly=CowboyCafe.Data"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ObjectDataProvider x:Key="SizeEnum" MethodName="GetValues"
+                        ObjectType="{x:Type sys:Enum}">
+            <ObjectDataProvider.MethodParameters>
+                <x:Type TypeName="data:Size"/>
+            </ObjectDataProvider.MethodParameters>
+        </ObjectDataProvider>
+    </UserControl.Resources>
     <StackPanel>
-        <TextBlock FontSize="30" Text="Customize Dakota Double Burger"/>
-        <StackPanel Orientation="Horizontal">
-            <CheckBox IsChecked="{Binding Path=Bread}">Bun</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Ketchup</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Mustard</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Cheese</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Tomato</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Lettuce</CheckBox>
-            <CheckBox IsChecked="{Binding Path=Pickle}">Mayo</CheckBox>
-        </StackPanel>
+        <ListBox Name="SizeOptions" SelectedIndex="0" Margin="8"
+               ItemsSource="{Binding Source={StaticResource SizeEnum}}"
+               SelectedItem="{Binding Path=Size}" />
     </StackPanel>
+   
 </UserControl>
