--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -70,15 +70,29 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.flex-columns {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    
+}
+
+.columns {
+    display: flex;
+    flex-direction: column;
+    
+}
+
 .row {
     display: flex;
     flex-direction: row;
 }
 
 
-
-div.column {
-    width: 200px;
-    margin: auto;
-   
+@media (max-width: 490px) {
+    .flex-columns {
+        flex-direction: column;
+    }
 }
+
+
